service-mesh/2. fault-injection/2. Delay in request/category-api/virtual-service.yaml
# Added a delay to 50% of api request from product api 
# to customer profile api
# of 180 seconds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: category-virtual-service
spec:
  hosts:
  - category-api-service.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: category-api-service.default.svc.cluster.local
        subset: all-pods
    fault:
      delay:
        fixedDelay: 30s
        percentage:
          value: 50
---
